--- a/inst/shiny_apps/Slick/data/translations/translation_es.csv
+++ b/inst/shiny_apps/Slick/data/translations/translation_es.csv
@@ -12,3 +12,4 @@ Performance Metrics,Métricas de rendimiento
 Projection,Proyección
 Stochastic,Estocástico
 Slick object not loaded. Please return to Home and load a Slick object.,Objeto Slick no cargado. Vuelva a Inicio y cargue un objeto Slick.
+Welcome,Bienvenidos
