--- a/vignettes/developer_guide.Rmd
+++ b/vignettes/developer_guide.Rmd
@@ -11,25 +11,78 @@ vignette: >
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  echo=FALSE
+  echo=TRUE
 )
 ```
 
-```{r setup}
+```{r setup, echo=FALSE}
 library(Slick)
 ```
 
 # Introduction
 
-## Slick Presentation of MSE Results
+`Slick` is a decision analysis tool that presents the outcomes of potential policy options across various states of nature. The App allows for the simultaneous presentation of various performance indicators and can account for uncertainty in the states of nature. Slick is interactive and allows users to filter results live in order to explore robustness and performance. 
 
-MSEs have four axes over which results are generally presented: 
+While Slick could be applied to any decision analysis context, it was specifically designed to investigate the performance of fisheries management procedures tested by management strategy evaluation (MSE). 
 
-1. operating models (a state of nature or scenario for real system dynamics)  
-2. management procedures (MP - a management option, aka. harvest strategy)
-3. performance metrics (aka. cost function, utility measure)
-4. Uncertainty within an operating model (multiple simulations for each discrete state of nature)
 
-Slick allows users to filter operating models, performance metrics and management procedures in order to explore robustness and characterize performance. Importantly, Slick is MSE-platform agnostic. Provided MSE practitioners format their results in a compatible Slick object, these can be loaded to the App. 
+## Purpose of this document
 
-Slick presents MSE results in 11 Figures designed to inform decision making by revealing the absolute and comparative performance of candidate management procedures 
+This document is a guide for analysts who wish to use `Slick` for their MSE results. It describes the format of the `Slick` object, and provides examples for how to create and populate a `Slick` object.
+
+## Prerequistes
+
+To use `Slick` you need to install the `Slick` R package from [Github Repository](https://github.com/Blue-Matter/Slick):
+
+```{r, eval=FALSE} 
+# install.packages('remotes)
+remotes::install_github('blue-matter/Slick')
+```
+
+`Slick` is platform agnostic and can be used with results from any MSE framework, provided they are formatted into a compatible `Slick` object.
+
+This Guide uses the [`openMSE`](https://openMSE.com) framework to produce MSE results. You'll need to install `openMSE` if you wish to run the code in this guide:
+
+```{r, eval=FALSE}
+install.packages('blue-matter/openMSE')
+```
+
+
+## Accessing the App
+
+The App includes example `Slick` objects that can be downloaded and examined in the R environment.
+
+### Online
+
+Slick is freely available [online](https://shiny.bluematterscience.com/app/slick). 
+
+### Offline
+
+You can also run the App locally on your computer. To do so install the [R package](https://github.com/Blue-Matter/Slick) and use the `Slick()` function:
+
+
+```{r offline, eval=F}
+library(Slick)
+Slick()
+```
+
+## Reporting Issues and Bugs
+
+Please use the [Issues](https://github.com/Blue-Matter/Slick/issues) feature in the GitHub repository to report issues or bugs. Please be sure to include a reproducible example so the issue can be recreated for de-bugging.
+
+[Pull Requests](https://github.com/Blue-Matter/Slick/pulls) are also welcome.
+
+# Making custom Slick objects  
+
+It is straightforward for MSE users to present their results using Slick. To do so they must:
+
+1. Download the Slick R package.
+2. Create a blank Slick object.
+3. Populate the various slots of the object with their data, text and labelling.
+4. Save the Slick object and upload it to the App.
+
+Slick objects have the following dimensions:
+
+
+
+
